add final change before merging again

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
     crossorigin=""></script>
     <!-- API key -->
-    <script type="text/javascript" src="static/js/config.js"></script>
+    <script type="text/javascript" src="static/js/config.js">
+
+
+    </script>
     <!-- Our JavaScript -->
     <script type="text/javascript" src="static/js/logic.js"></script>
 </body>
