--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
     crossorigin=""></script>
     <!-- API key -->
-    <script type="text/javascript" src="static/js/config.js">
-
-
-    </script>
+    <script type="text/javascript" src="static/js/config.js"></script>
+    <!-- data file -->
+    <script type="text/javascript" src="static/js/cities.js"></script>
     <!-- Our JavaScript -->
     <script type="text/javascript" src="static/js/logic.js"></script>
+
+
 </body>
 </html>
