--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
     crossorigin=""></script>
+    <!-- d3 JS -->
+    <script src = "https://d3js.org/d3.v5.min.js"></script>
     <!-- API key -->
     <script type="text/javascript" src="static/js/config.js"></script>
     <!-- data file -->
-    <script type="text/javascript" src="static/js/cities.js"></script>
+    <!-- <script type="text/javascript" src="static/js/cities.js"></script> -->
+    <script type="text/javascript" src="static/js/geojson.js"></script>
     <!-- Our JavaScript -->
     <script type="text/javascript" src="static/js/logic.js"></script>
 
