--- a/index.html
+++ b/index.html
@@ -24,11 +24,8 @@
     <script src = "https://d3js.org/d3.v5.min.js"></script>
     <!-- API key -->
     <script type="text/javascript" src="static/js/config.js"></script>
-    <!-- data file -->
-    <!-- <script type="text/javascript" src="static/js/cities.js"></script> -->
-    <script type="text/javascript" src="static/js/geojson.js"></script>
     <!-- Our JavaScript -->
-    <script type="text/javascript" src="static/js/logic.js"></script>
+    <script type="text/javascript" src="static/js/logicStep1.js"></script>
 
 
 </body>
